PR182 Finish Login

--- a/PR182-FirebaseChat/app/src/main/res/layout/activity_login.xml
+++ b/PR182-FirebaseChat/app/src/main/res/layout/activity_login.xml
@@ -6,4 +6,5 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/primary"
+    android:fitsSystemWindows="true"
     tools:context="es.iessaladillo.pedrojoya.pr182.login.LoginActivity" />
