--- a/PR182-FirebaseChat/app/src/main/res/layout/fragment_login.xml
+++ b/PR182-FirebaseChat/app/src/main/res/layout/fragment_login.xml
@@ -1,96 +1,102 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                xmlns:tools="http://schemas.android.com/tools"
+<android.support.v4.widget.NestedScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="@dimen/login.root.padding">
+
+        <TextView
+            android:id="@+id/lblAppName"
+            style="@style/Base.TextAppearance.AppCompat.Display2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:padding="@dimen/login.lblAppName.padding"
+            android:text="@string/app_name"
+            android:textColor="@color/icons" />
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/tilEmail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/lblAppName"
+            android:layout_marginBottom="@dimen/login.root.vertical_margin"
+            app:hintTextAppearance="@style/LoginHintText">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/txtEmail"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:padding="@dimen/login.root.padding">
+                android:layout_height="wrap_content"
+                android:hint="@string/login.email.hint"
+                android:inputType="textEmailAddress"
+                android:textColor="@color/icons"
+                android:theme="@style/LoginEditText">
 
-    <TextView
-        android:id="@+id/lblAppName"
-        style="@style/Base.TextAppearance.AppCompat.Display2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:padding="@dimen/login.lblAppName.padding"
-        android:text="@string/app_name"
-        android:textColor="@color/icons"/>
+                <requestFocus />
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/tilEmail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/lblAppName"
-        android:layout_marginBottom="@dimen/login.root.vertical_margin"
-        app:hintTextAppearance="@style/LoginHintText">
+            </android.support.design.widget.TextInputEditText>
 
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/txtEmail"
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/tilPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/login.email.hint"
-            android:inputType="textEmailAddress"
-            android:textColor="@color/icons"
-            android:theme="@style/LoginEditText">
+            android:layout_below="@+id/tilEmail"
+            android:layout_marginBottom="@dimen/login.root.vertical_margin"
+            app:hintTextAppearance="@style/LoginHintText">
 
-            <requestFocus />
+            <com.marlonmafra.android.widget.EditTextPassword
+                android:id="@+id/txtPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/login.password.hint"
+                android:inputType="textPassword"
+                android:textColor="@color/icons"
+                android:theme="@style/LoginEditText"
+                app:hidePasswordIcon="@drawable/ic_visibility"
+                app:iconPosition="right"
+                app:showPasswordIcon="@drawable/ic_visibility_off" />
 
-        </android.support.design.widget.TextInputEditText>
+        </android.support.design.widget.TextInputLayout>
 
-    </android.support.design.widget.TextInputLayout>
-
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/tilPassword"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tilEmail"
-        android:layout_marginBottom="@dimen/login.root.vertical_margin"
-        app:hintTextAppearance="@style/LoginHintText">
-
-        <com.marlonmafra.android.widget.EditTextPassword
-            android:id="@+id/txtPassword"
+        <Button
+            android:id="@+id/btnSignIn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/login.password.hint"
-            android:inputType="textPassword"
-            android:textColor="@color/icons"
-            android:theme="@style/LoginEditText"
-            app:hidePasswordIcon="@drawable/ic_visibility"
-            app:iconPosition="right"
-            app:showPasswordIcon="@drawable/ic_visibility_off"/>
+            android:layout_below="@+id/tilPassword"
+            android:layout_marginBottom="@dimen/login.root.vertical_margin"
+            android:text="@string/login.loginbutton.text"
+            android:theme="@style/LoginButton" />
 
-    </android.support.design.widget.TextInputLayout>
+        <TextView
+            android:id="@+id/lblSignUp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/btnSignIn"
+            android:clickable="true"
+            android:focusable="true"
+            android:gravity="center"
+            android:paddingBottom="@dimen/login.root.vertical_margin"
+            android:text="@string/login.signupbutton.text"
+            android:textColor="@color/login_singup_label"
+            android:textColorLink="@color/login_singup_label" />
 
-    <Button
-        android:id="@+id/btnSignIn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tilPassword"
-        android:layout_marginBottom="@dimen/login.root.vertical_margin"
-        android:text="@string/login.loginbutton.text"
-        android:theme="@style/LoginButton"/>
+        <com.github.silvestrpredko.dotprogressbar.DotProgressBar
+            android:id="@+id/pbLoading"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/login.progress.height"
+            android:layout_below="@+id/lblSignUp"
+            android:visibility="gone"
+            app:amount="@integer/login.progress.amount"
+            app:duration="@android:integer/config_mediumAnimTime"
+            app:endColor="@color/icons"
+            app:startColor="@color/primary_light" />
 
-    <TextView
-        android:id="@+id/lblSignUp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/btnSignIn"
-        android:clickable="true"
-        android:focusable="true"
-        android:gravity="center"
-        android:paddingBottom="@dimen/login.root.vertical_margin"
-        android:text="@string/login.signupbutton.text"
-        android:textColor="@color/login_singup_label"
-        android:textColorLink="@color/login_singup_label"/>
-
-    <com.github.silvestrpredko.dotprogressbar.DotProgressBar
-        android:id="@+id/pbLoading"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/login.progress.height"
-        android:layout_below="@+id/lblSignUp"
-        android:visibility="gone"
-        app:amount="@integer/login.progress.amount"
-        app:duration="@android:integer/config_mediumAnimTime"
-        app:endColor="@color/icons"
-        app:startColor="@color/primary_light"/>
-
-</RelativeLayout>
+    </RelativeLayout>
+</android.support.v4.widget.NestedScrollView>
