--- a/PR182-FirebaseChat/app/src/main/res/values/dimens.xml
+++ b/PR182-FirebaseChat/app/src/main/res/values/dimens.xml
@@ -2,9 +2,11 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="general.fab.margin">16dp</dimen>
     <dimen name="login.lblAppName.padding">40dp</dimen>
     <dimen name="login.root.padding">24dp</dimen>
     <dimen name="login.root.vertical_margin">24dp</dimen>
     <dimen name="login.progress.height">24dp</dimen>
+    <dimen name="contacts.lstContacts.paddingTop">8dp</dimen>
+    <dimen name="contacts.lblEmptyView.drawablePadding">16dp</dimen>
 </resources>
