PR149 Change EditText to TextInputEditText Add PR185

--- a/PR149-TextInputLayout/app/src/main/res/layout/activity_main.xml
+++ b/PR149-TextInputLayout/app/src/main/res/layout/activity_main.xml
@@ -14,14 +14,14 @@
         android:layout_marginBottom="@dimen/activity_margin"
         app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
 
-        <EditText
+        <android.support.design.widget.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/nombre"
             android:inputType="textPersonName">
 
             <requestFocus/>
-        </EditText>
+        </android.support.design.widget.TextInputEditText>
 
     </android.support.design.widget.TextInputLayout>
 
@@ -29,17 +29,17 @@
         android:id="@+id/tilTelefono"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/activity_horizontal_margin"
         android:layout_below="@+id/tilNombre"
+        android:layout_marginBottom="@dimen/activity_horizontal_margin"
         app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
 
-        <EditText
+        <android.support.design.widget.TextInputEditText
             android:id="@+id/txtTelefono"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/telefono"
-            android:maxLength="9"
-            android:inputType="phone"/>
+            android:inputType="phone"
+            android:maxLength="9"/>
 
     </android.support.design.widget.TextInputLayout>
 
@@ -47,16 +47,35 @@
         android:id="@+id/tilEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/activity_horizontal_margin"
         android:layout_below="@+id/tilTelefono"
+        android:layout_marginBottom="@dimen/activity_horizontal_margin"
         app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
 
-        <EditText
+        <android.support.design.widget.TextInputEditText
             android:id="@+id/txtEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/email"
             android:inputType="textEmailAddress"/>
+
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/tilPassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tilEmail"
+        android:layout_marginBottom="@dimen/activity_horizontal_margin"
+        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
+        app:passwordToggleContentDescription="@string/cambiar_visualizacion"
+        app:passwordToggleDrawable="@drawable/password_visibility">
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/txtPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/password"
+            android:inputType="textPassword"/>
 
     </android.support.design.widget.TextInputLayout>
 
