--- a/PR184-DAMTwitterClient/app/src/main/res/layout/activity_login.xml
+++ b/PR184-DAMTwitterClient/app/src/main/res/layout/activity_login.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/primary_dark"
     android:padding="@dimen/login.root.padding">
 
     <TextView
@@ -13,7 +14,7 @@
         android:gravity="center"
         android:padding="@dimen/login.lblAppName.padding"
         android:text="@string/app_name"
-        android:textColor="@color/icons" />
+        android:textColor="@color/icons"/>
 
     <!-- Botón de login de Twitter (proporcionado por Fabric) -->
     <com.twitter.sdk.android.core.identity.TwitterLoginButton
@@ -21,6 +22,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/lblAppName"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerInParent="true"/>
 
 </RelativeLayout>
