PR119 Fix error on orientation change

--- a/PR119-Almacenamiento/app/src/main/res/layout/activity_main.xml
+++ b/PR119-Almacenamiento/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,8 @@
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/assets" />
+                android:text="@string/assets"
+                android:id="@+id/rbAsset"/>
         </RadioGroup>
 
         <TextView
