--- a/PR173-BottomSheetPermanente/app/src/main/res/layout/activity_main.xml
+++ b/PR173-BottomSheetPermanente/app/src/main/res/layout/activity_main.xml
@@ -1,24 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="es.iessaladillo.pedrojoya.pr173.MainActivity">
+<android.support.design.widget.CoordinatorLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context="es.iessaladillo.pedrojoya.pr173.MainActivity">
 
-    <include layout="@layout/content_main" />
+    <include layout="@layout/content_main"/>
 
     <include
-        android:id="@+id/rlPanel"
-        layout="@layout/bottom_sheet" />
+            android:id="@+id/rlPanel"
+            layout="@layout/bottom_sheet"/>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/ic_search"
-        app:layout_anchor="@+id/rlPanel"
-        app:layout_anchorGravity="top|end" />
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/fab_margin"
+            android:src="@drawable/ic_search"
+            app:layout_anchor="@+id/rlPanel"
+            app:layout_anchorGravity="top|end"/>
 
 </android.support.design.widget.CoordinatorLayout>
