--- a/PR163-PageTransformer/app/src/main/res/layout/fragment_main.xml
+++ b/PR163-PageTransformer/app/src/main/res/layout/fragment_main.xml
@@ -1,5 +1,4 @@
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,6 +10,6 @@
         android:layout_height="wrap_content"
         android:textSize="@dimen/fragment_textview_textSize"
         android:textColor="@android:color/white"
-        android:layout_centerInParent="true"/>
+        android:layout_centerInParent="true" />
 
 </RelativeLayout>
