--- a/PR159-PreLollipopActivityTransition/app/src/main/res/layout/activity_detalle.xml
+++ b/PR159-PreLollipopActivityTransition/app/src/main/res/layout/activity_detalle.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    android:id="@+id/main_content"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="@bool/fitsSystemWindows">
 
+    <!-- La AppBar está oculta hasta que termina la transición -->
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/appbar_height"
         android:background="@android:color/transparent"
         android:fitsSystemWindows="@bool/fitsSystemWindows"
+        android:visibility="invisible"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <android.support.design.widget.CollapsingToolbarLayout
@@ -25,16 +28,15 @@
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <ImageView
-                android:id="@+id/imgFotoDetalle"
+                android:id="@+id/imgAppbar"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:contentDescription="@string/imagen_cabecera"
                 android:fitsSystemWindows="@bool/fitsSystemWindows"
                 android:scaleType="centerCrop"
-                android:transitionName="@string/nombre_transicion_imagen"
                 app:layout_collapseMode="parallax"
-                app:layout_collapseParallaxMultiplier="0.3"
-                tools:ignore="UnusedAttribute" />
+                app:layout_collapseParallaxMultiplier="@dimen/collapseParallaxMultiplier"
+                tools:ignore="InconsistentLayout,UnusedAttribute"/>
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
@@ -42,32 +44,47 @@
                 android:layout_height="?attr/actionBarSize"
                 android:fitsSystemWindows="@bool/fitsSystemWindows"
                 app:layout_collapseMode="pin"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
 
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
+    <!-- El WebView debe estar incluido en un NestedScrollView para que
+         el scroll en él pueda mover la AppBar -->
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/nsvScrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/cvTarjeta"
+        <android.support.v7.widget.CardView
+            android:id="@+id/cvTarjeta"
+            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            card_view:cardCornerRadius="@dimen/cardCornerRadius"
+            card_view:cardElevation="@dimen/cardElevation"
+            card_view:cardUseCompatPadding="true">
+
+            <WebView
+                android:id="@+id/wvNavegador"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                card_view:cardCornerRadius="5dp"
-                card_view:cardElevation="6dp"
-                card_view:cardUseCompatPadding="true">
+                android:layout_height="match_parent"/>
 
-                <WebView
-                    android:id="@+id/wvNavegador"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
-
-            </android.support.v7.widget.CardView>
+        </android.support.v7.widget.CardView>
 
     </android.support.v4.widget.NestedScrollView>
+
+    <!-- Imagen sólo visible durante la transición.
+         Importante: Definida al final para que quede por encima -->
+    <ImageView
+        android:id="@+id/imgFotoDetalle"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/appbar_height"
+        android:contentDescription="@string/imagen_cabecera"
+        android:fitsSystemWindows="@bool/fitsSystemWindows"
+        android:scaleType="centerCrop"
+        android:transitionName="@string/nombre_transicion_imagen"
+        tools:ignore="UnusedAttribute"/>
 
 </android.support.design.widget.CoordinatorLayout>
