--- a/PR159-PreLollipopActivityTransition/app/src/main/res/values/dimens.xml
+++ b/PR159-PreLollipopActivityTransition/app/src/main/res/values/dimens.xml
@@ -5,4 +5,6 @@
     <dimen name="info_textSize">14sp</dimen>
     <dimen name="appbar_height">256dp</dimen>
     <dimen name="collapsing_titleMarginStart">32dp</dimen>
+    <dimen name="cardCornerRadius">5dp</dimen>
+    <dimen name="cardElevation">6dp</dimen>
 </resources>
