--- a/PR161-LaunchScreen/app/src/main/res/drawable/launch_screen.xml
+++ b/PR161-LaunchScreen/app/src/main/res/drawable/launch_screen.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android" android:opacity="opaque">
-    <!-- The background color, preferably the same as your normal theme -->
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android"
+            android:opacity="opaque">
+    <!-- Color de fondo -->
     <item android:drawable="@android:color/white"/>
-    <!-- Your product logo - 144dp color version of your app icon -->
+    <!-- Logo cuadrado de 144dp -->
     <item>
         <bitmap
             android:src="@drawable/product_logo_144dp"
