--- a/PR028-SQLiteLoader/app/src/main/res/layout/fragment_lista_alumnos_item.xml
+++ b/PR028-SQLiteLoader/app/src/main/res/layout/fragment_lista_alumnos_item.xml
@@ -13,8 +13,8 @@
         android:layout_marginLeft="@dimen/three_lines_avatar_marginLeft"
         android:layout_marginStart="@dimen/three_lines_avatar_marginLeft"
         android:layout_marginTop="@dimen/three_lines_avatar_marginTop"
-        app:border_width="1dp"
-        app:border_color="@color/accent" />
+        app:civ_border_width="1dp"
+        app:civ_border_color="@color/accent" />
 
     <TextView
         android:id="@+id/lblNombre"
