--- a/PR104-Toolbar/app/src/main/res/values/styles.xml
+++ b/PR104-Toolbar/app/src/main/res/values/styles.xml
@@ -1,22 +1,34 @@
 <resources>
 
-    <!-- Tema base de la aplicación. Debe heredar de Theme.AppCompat -->
-    <style name="AppThemeBase" parent="Theme.AppCompat.Light.DarkActionBar">
+    <!-- Tema de la aplicación. Debe heredar de Theme.AppCompat -->
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Color de la ActionBar -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <!-- Color de la barra de notificaciones -->
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <!-- Color de acento (contraste) -->
         <item name="colorAccent">@color/colorAccent</item>
+        <!-- Otros atributos relacionados con el color
+        <item name="colorControlNormal">Color normal</item>
+        <item name="colorControlActivated">Color cuando activado</item>
+        <item name="android:textColorPrimary">Color del texto</item>
+        <item name="android:textColorHint">Color para el Hint</item>
+        Para saber más: https://gist.github.com/boxme/1fec2a44cc46fad221ee -->
+        <!-- Para usar la fuente Roboto (a partir de API 16)
+        <item name="android:fontFamily">sans-serif</item> -->
     </style>
 
+    <!-- Tema para las actividades que van a usar Toolbar -->
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="AppTheme" parent="AppThemeBase">
+    <!-- La Toolbar se mostrará oscura -->
+    <style name="AppTheme.AppBarOverlay"
+           parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
-    </style>
+    <!-- El menú de overflow en la Toolbar se mostrará claro -->
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
 
 </resources>
