--- a/PR114-HistorialLlamadas/app/src/main/res/layout/activity_main.xml
+++ b/PR114-HistorialLlamadas/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.RecyclerView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/lstLlamadas"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/lstLlamadas"
-    tools:context=".MainActivity" />
+    tools:context=".MainActivity"/>
