--- a/PR158-Realm/app/src/main/res/layout/activity_detalle.xml
+++ b/PR158-Realm/app/src/main/res/layout/activity_detalle.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/appbar_height"
         android:fitsSystemWindows="@bool/fitsSystemWindows"
+        android:background="@android:color/transparent"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <android.support.design.widget.CollapsingToolbarLayout
@@ -18,6 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="@bool/fitsSystemWindows"
+            android:background="@android:color/transparent"
             app:contentScrim="?attr/colorPrimary"
             app:expandedTitleMarginStart="@dimen/collapsing_titleMarginStart"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
