PR203 Add Subjects

--- a/PR203-ObjectBox/app/src/main/res/values/styles.xml
+++ b/PR203-ObjectBox/app/src/main/res/values/styles.xml
@@ -1,21 +1,26 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppThemeBase" parent="Theme.AppCompat.Light.NoActionBar">
+    <!-- Tema de la aplicación. Debe heredar de Theme.AppCompat -->
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorAccent">@color/accent</item>
     </style>
 
-    <!-- Tema de la aplicación. -->
-    <style name="AppTheme" parent="AppThemeBase">
-
+    <!-- Tema para las actividades que van a usar Toolbar -->
+    <style name="AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
     </style>
 
-    <!-- Tema de la actividad de detalle -->
-    <style name="DetalleTheme" parent="AppThemeBase">
-
+    <style name="AppTheme.NoActionBar.NoStatusBar">
     </style>
 
+    <!-- Estilo para que la toolbar se muestre oscura -->
+    <style name="AppTheme.AppBarOverlay"
+           parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
+
+    <!-- Estilo para que el menú de overflow en la toolbar se muestre claro -->
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
 
 </resources>
