--- a/PR203-ObjectBox/app/src/main/res/layout/activity_detalle.xml
+++ b/PR203-ObjectBox/app/src/main/res/layout/activity_detalle.xml
@@ -96,13 +96,14 @@
                 android:layout_marginBottom="@dimen/activity_horizontal_margin"
                 android:hint="@string/asignaturas">
 
-                <es.iessaladillo.pedrojoya.pr158.utils.ClickToMultipleSelectEditText
+                <android.support.design.widget.TextInputEditText
                     android:id="@+id/txtAsignaturas"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:drawableEnd="@drawable/ic_arrow_drop_down"
-                    android:drawableRight="@drawable/ic_arrow_drop_down"
-                    android:inputType="none"/>
+                    android:text="@string/ninguna"
+                    android:inputType="none"
+                    android:focusable="false"
+                    android:clickable="false"/>
 
             </android.support.design.widget.TextInputLayout>
         </LinearLayout>
