--- a/PR203-ObjectBox/app/src/main/res/values-v21/styles.xml
+++ b/PR203-ObjectBox/app/src/main/res/values-v21/styles.xml
@@ -1,12 +1,6 @@
 <resources>
 
-    <!-- Tema de la aplicación -->
-    <style name="AppTheme" parent="AppThemeBase">
-        <item name="android:windowTranslucentStatus">false</item>
-    </style>
-
-    <!-- Tema de la actividad de detalle -->
-    <style name="DetalleTheme" parent="AppThemeBase">
+    <style name="AppTheme.NoActionBar.NoStatusBar">
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <item name="android:windowTranslucentStatus">false</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
