--- a/PR021-Spinner/app/src/main/res/layout/activity_main_pais_collapsed.xml
+++ b/PR021-Spinner/app/src/main/res/layout/activity_main_pais_collapsed.xml
@@ -21,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:gravity="center_vertical"
-        android:singleLine="true"
+        android:maxLines="1"
         android:textAppearance="?android:attr/textAppearanceMedium"/>
 
 </LinearLayout>
