Improve PR204 tests

--- a/PR204-MVPRxJava/app/src/main/res/layout/activity_main.xml
+++ b/PR204-MVPRxJava/app/src/main/res/layout/activity_main.xml
@@ -4,4 +4,5 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="pedrojoya.iessaladillo.es.pr204.main.view.MainActivity"/>
+    tools:context="pedrojoya.iessaladillo.es.pr204.main.view.MainActivity"
+    tools:ignore="MergeRootFrame"/>
